Upgraded to Thin

--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>422</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +19,9 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <img src="adt2_blue.png" style='max-height:300px'>
+    <h1>Sorry, you don't have permission to perform that action.</h1>
+    <p>Try returning <a href='/'>home</a> or <a href='mailto:info@aiddata.org'>contact AidData</a> to report this error.</p>
   </div>
 </body>
 </html>
