--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>500</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,7 +19,9 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <img src="adt2_blue.png" style='max-height:300px'>
+    <h1>Sorry, there's been an error.</h1>
+    <p>Try returning <a href='/'>home</a> or <a href='mailto:info@aiddata.org'>contact AidData</a> to report this error.</p>
   </div>
 </body>
 </html>
