prepare asset pipeline, catch PSQL/SQLite difference in aggregate controller

--- a/public/404.html
+++ b/public/404.html
@@ -19,7 +19,7 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <img src="adt2_blue.png" style='max-height:300px'>
+    <img src="/public/adt2_blue.png" style='max-height:300px'>
     <h1>Sorry, this page doesn't exist.</h1>
     <p>Try returning <a href='/'>home</a> or <a href='mailto:info@aiddata.org'>contact AidData</a> to report this error.</p>
   </div>
