--- a/public/500.html
+++ b/public/500.html
@@ -19,7 +19,7 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <img src="/adt2_blue.png" style='max-height:300px'>
+    <img src="/adt2_blue.png" style='margin:20px;max-height:300px;max-width:300px;'>
     <h1>Sorry, there's been an error.</h1>
     <p>Try returning <a href='/'>home</a> or <a href='mailto:info@aiddata.org'>contact AidData</a> to report this error.</p>
   </div>
