Search selection counter, formating for money, don't cache org names

--- a/public/500.html
+++ b/public/500.html
@@ -21,7 +21,7 @@
   <div class="dialog">
     <img src="/adt2_blue.png" style='margin:20px;max-height:300px;max-width:300px;'>
     <h1>Sorry, there's been an error.</h1>
-    <p>Try returning <a href='/'>home</a> or <a href='mailto:info@aiddata.org'>contact AidData</a> to report this error.</p>
+    <p>Try returning <a href='/'>home</a> or <a href='mailto:china@aiddata.org'>contact AidData</a> to report this error.</p>
   </div>
 </body>
 </html>
